Copyright (c) 2002-2009 Infrae. All rights reserved.
See also LICENSE.txt

Silva changes

  Silva 2.1.6 (unreleased)

    Bug fixes

      - Errors when attempting to create thumbnails from interlaced
        PNGs are now displayed to the user.

  Silva 2.1.5 (2009-07-29)

    Bug fixes

      - Get reference button did not work for a Ghost folder.

      - Add a traverser to a non-existant view on RessourceDirectory
        to get a 404 instead of an error.

      - Discard CodeSource parameter which are unknown in SilvaDocument
        when saving/rendering a document in kupu.

      - Check for file extension when uploading a file: you can only
        upload a file which have an extension.


  Silva 2.1.5b1 (2009-06-04)

    Bug fixes

      - fix some formatting issues with buttons in the edit tab for
        containers

      - fix an issue in the subscription service when, on the status
        tab of versioned content, the 'publish now' button is pressed
        with an expiration date < publication date AND the subscription
        service is enabled
    
  Silva 2.1.4 (2009-05-08)

    New features

      - Exceptions raised during the upgrade process
        will now include the object causing the error
        in the traceback.

      - sec_get_all_roles, in addition to looking up the roles
        the authenticated user has in this context, can also
        get the roles of an arbitrary user (by passing in the
        userid).

      - Set two differents on Asset to prevent them to maintain a
        different cache for each user. That will force each user to
        authenticate if needed to access to the resource.

    Bug fixes

      - The tocrendering adapter now shows all silva publishable
        types by default.

      - Fixing SilvaFind in documentation.

      - Fix annoying popup when using kupu and safari.

      - Fix some error when invalidating the SMI sidebar cache.


  Silva 2.1.4b2 (2009-04-23)

    Bug fixes
